--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -188,7 +188,10 @@ body {
   box-shadow: 0px 5px 25px red;
   color: black;
   overflow-x: auto;
-  height: 450px;
+  height: 440px;
+}
+.container::-webkit-scrollbar{
+  visibility: hidden;
 }
 #item1:hover,
 #item2:hover,
